manifest/dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-v1
  labels:
    app.kubernetes.io/component: dotnet
    app.kubernetes.io/instance: dotnet
    app.kubernetes.io/name: dotnet
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: dotnet  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet
      version: v1
  template:
    metadata:
      labels:
        app: dotnet
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: dotnet
        image: chatapazar/dotnet:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.1"
            memory: 200Mi
          limits:
            cpu: "0.2"
            memory: 400Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet
  labels:
    app: dotnet
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: dotnet
---
