manifest/dotnet-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dotnet
spec:
  host: dotnet
  subsets:
  - name: v1
    labels:
      app: dotnet
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
